<resources>
    <string name="app_name">RPI</string>
    <string name="default_notification_channel_id">Notification</string>
    <string name="register">Daftar</string>
    <string name="parent_name">Nama</string>
    <string name="parent_no">Nomor Ponsel</string>
    <string name="email">Alamat email</string>
    <string name="password">Kata Sandi</string>
    <string name="signin">Masuk</string>
    <string name="forgot_password">Lupa sandi?</string>
    <string name="fb">Masuk dengan Facebook.</string>
    <string name="register_fb">Daftar dengan Facebook</string>
    <string name="login">Masuk</string>
    <string name="or">atau</string>
    <string name="new_member"> Anggota baru?</string>
    <string name="no_internet_connection">Ada kesalahan internet atau koneksi. Silahkan coba lagi.</string>
    <string name="how_old_is_child">Berapa umur anak Anda?</string>
    <string name="bday_details">tanggal lahir anak</string>
    <string-array name="date">
        <item>tanggal</item>
        <item>1</item>
    </string-array>
    <string-array name="month">
        <item>bulan</item>
    </string-array>
    <string-array name="year">
        <item>tahun</item>
    </string-array>
    <string name="next">berikutnya</string>
    <string name="whats_child_name">Anak Anda</string>
    <string name="child_name">nama anak</string>
    <string name="get_started">mulai</string>
    <string name="home">home</string>
    <string name="explorer">eksplor</string>
    <string name="activity">aktifitas</string>
    <string name="account">akun saya</string>
    <string name="milestone">Milestone</string>
    <string name="general">Umum</string>
    <string name="set_parent_name">Nama Orang Tua</string>
    <string name="change_password">Ubah Sandi</string>
    <string name="about_us">Tentang Kami</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="terms">Syarat Dan Ketentuan</string>
    <string name="faq">FAQ</string>
    <string name="children">Anak</string>
    <string name="logout">keluar</string>
    <string name="recover_password">Pemulihan "lupa kata sandi"</string>
    <string name="retrive_password">Lupa Sandi</string>
    <string name="retrive_text">Untuk mendapatkan kembali kata sandi Anda, masukkan alamat email Anda di bawah ini kemudian klik untuk mengambil mendapatkan kata sandi
</string>
    <string name="old_password">Sandi Lama</string>
    <string name="new_password">Sandi Baru</string>
    <string name="confirm_password">Konfirmasi Sandi</string>
    <string name="submit">Kirim</string>
    <string name="change_profile_photo">Konfirmasi sandi</string>
    <string-array name="birth_month">
        <item>Birth Month</item>
    </string-array>
    <string-array name="birth_year">
        <item>Birth Year</item>
    </string-array>
    <string name="height">Tinggi badan</string>
    <string name="weight">Berat badan</string>
    <string name="save_changes">Simpan perubahan</string>
    <string name="delete">Hapus</string>
    <string name="add_child">Tambah Anak</string>
    <string name="questions">Questions</string>
    <string name="activity_completed">Aktivitas Selesai</string>
    <string name="points_earned">Nilai Terkumpul</string>
    <string name="todays_target_activity">Target aktivitas hari ini</string>
    <string name="environment">Environmental</string>
    <string name="points">Nilai</string>
    <string name="activity_name">Activity Name</string>
    <string name="description">Description</string>
    <string name="see_learning">Lihat apa yang dipelajari anak dari aktivitas ini</string>
    <string name="learning">Learning</string>
    <string name="we_did_it">Kita berhasil!</string>
    <string name="milestone_reminder">Milestone Reminder</string>
    <string name="do_it_again">Selesai</string>
    <string name="camera"> Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="take_photo">Ambil foto</string>
    <string name="title">Title</string>
    <string name="short_description">Short Description</string>
    <string name="category_name">Category Name</string>
    <string name="Know_about_ur_child">Ketahui tentang anak Anda</string>
    <string name="facebook_app_id">236263297500977</string>
    <string name="fb_login_protocol_scheme">fb236263297500977</string>
    <string name="privacyPolicyHeading">KEBIJAKAN PRIVASI RPI</string>
    <string name="faqHeading">FAQ</string>
    <string name="TnCHeading">KETENTUAN PENGGUNAAN APLIKASI RPI</string>
    <string name="faqtext">Login and Signup\n
                          "      "What information will I need to set up my account?\n
                          "      "Should I use Google or Facebook to log in? \n
                          "      "Is my phone supported? \n\n

                          Security and Payment\n
                        "      "Is the mobile app secure?\n
  "      "Can I access the app abroad?\n
  "      "Is there a fee for using the app?\n\n

Features\n

  "      "What features does the app include?\n
  "      "How do I get started with the app? \n
  "      "What is the questionnaire used for?\n
  "      "Can I change or edit my child’s information after signing up? \n
  "      "How many children can we add on the app?
</string>
</resources>