<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selection"
        android:enabled="true"
        android:fontFamily="@font/brandon_grotesque_bold"
        app:showAsAction="ifRoom"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_explorer"
        android:icon="@drawable/explorer_selection"
        android:enabled="true"
        android:fontFamily="@font/brandon_grotesque_bold"
        app:showAsAction="ifRoom"
        android:title="@string/explorer"/>

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/activity_selection"
        android:enabled="true"
        android:fontFamily="@font/brandon_grotesque_bold"
        app:showAsAction="ifRoom"
        android:title="@string/activity"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account_selection"
        android:enabled="true"
        android:fontFamily="@font/brandon_grotesque_bold"
        app:showAsAction="ifRoom"
        android:title="@string/account"/>

</menu>