<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.resourcefulparenting.fragment.MyAccountGeneralFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ac_parent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:text="@string/parent_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_ac_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:text="@string/general"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/account_set_parent_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/account_even"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:padding="12dp"
                android:text="@string/set_parent_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/account_change_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/account_odd"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:padding="12dp"
                android:text="@string/change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/account_aboutus_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/account_even"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:padding="12dp"
                android:text="@string/about_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/account_terms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/account_odd"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:padding="12dp"
                android:text="@string/terms"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/account_policy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/account_even"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:padding="12dp"
                android:text="@string/privacy_policy"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/account_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/account_odd"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:padding="12dp"
                android:text="@string/faq"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:text="@string/children"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_child_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/orange_bg"
                android:fontFamily="@font/brandongrotesque_regular"
                android:padding="10dp"
                android:text="@string/logout"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminate="true" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>